Se elimina modifica el nombre de cada modelo
